<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/avatar"
        android:contentDescription="@string/profil"/>

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_lihat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
            android:text="@string/lihat_detail" />

        <Button
            android:id="@+id/btn_tutup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_close_black_24dp"
            android:text="@string/tutup" />
    </LinearLayout>

</LinearLayout>