<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Register"
    android:weightSum="10">

    <TextView
        android:padding="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_n_my_chat_forever"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nmr_telpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomor_handphone"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:layout_marginTop="24dp"
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>